src/objects/Rebate_Approver_Matrix__c.object
<CustomObject>
    <description>This object will keep track of Approvers for Rebate records.</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate_Approver_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus Aggrement Checker</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Corporate Control</fullName>
                </value>
                <value>
                    <fullName>Regional Controller</fullName>
                </value>
                <value>
                    <fullName>Regional Channel Controller</fullName>
                </value>
                <value>
                    <fullName>Global Channel Controller</fullName>
                </value>
                <value>
                    <fullName>BL Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>GSM Controller</fullName>
                </value>
                <value>
                    <fullName>Global Sales &amp; OPS Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Disti Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rebate Approver Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>Region__c</columns>
        <columns>MAG__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BL_Marketing_Manager</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>MAG__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MAG__c</field>
            <operation>contains</operation>
            <value>RBM</value>
        </filters>
        <label>BL Marketing Manager</label>
    </listViews>
    <listViews>
        <fullName>BL_Marketing_Manager_AMEC</fullName>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>MAG__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MAG__c</field>
            <operation>contains</operation>
            <value>RBM</value>
        </filters>
        <label>BL Marketing Manager_AMEC</label>
    </listViews>
    <listViews>
        <fullName>BL_Marketing_Manager_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>MAG__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>BL Marketing Manager</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA,Global</value>
        </filters>
        <filters>
            <field>MAG__c</field>
            <operation>equals</operation>
            <value>R33,R34,R71,RC5</value>
        </filters>
        <label>BL Marketing Manager_EMEA</label>
    </listViews>
    <listViews>
        <fullName>BL_Marketing_Manager_South_AP</fullName>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>MAG__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>BL Marketing Manager</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>South Asia Pacific</value>
        </filters>
        <label>BL Marketing Manager_South AP</label>
    </listViews>
    <listViews>
        <fullName>Regional_Sales_Manager</fullName>
        <columns>Role__c</columns>
        <columns>Approver__c</columns>
        <columns>MAG__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Regional Sales Manager</value>
        </filters>
        <label>Regional Sales Manager</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Rebate Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Approver Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approver_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Approver__c )</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Approver is a required field, please select an approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BL_Marketing_Manager_requires_MAG</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Role__c , &apos;BL Marketing Manager&apos; )  &amp;&amp; ISBLANK( MAG__c )</errorConditionFormula>
        <errorDisplayField>MAG__c</errorDisplayField>
        <errorMessage>MAG is a required field when the Role is &apos;BL Marketing Manager&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT( Region__c ))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region is a required field, Please select a region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(  Role__c  ) )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role is a required field, please select a role.</errorMessage>
    </validationRules>
</CustomObject>